<resources>
    <string name="app_name">Story App</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="invalid_password">Must be at least 6 characters</string>
    <string name="image_story">Image Story</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="image_desc">IMAGE</string>
    <string name="gallery">gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="upload">upload</string>
    <string name="add_story">add story</string>
</resources>